# TinyRender

./: .clang-format  .clangd  CMakeLists.txt  README.md  TinyRender.code-workspace  build.bat  compile_commands.json.lnk  meson.build  meson_options.txt  setup_meson_builds.bat
.cache/clangd/index/: Main.cpp.DDA89F93DE450A91.idx  Start.cpp.AE48E0329B241789.idx  TinyRender.cpp.1C199619A337488B.idx  TinyRender.h.3F5FA1AF8F556583.idx  TinyRender_p.h.59D1EA93118A2D6E.idx  Vertex.hpp.E32E4D29E8040C1F.idx  Window.cpp.C0EEC5F7055576BC.idx  Window.hpp.967664AE2A35A01E.idx  allocator.h.6F79704546D9F3BC.idx  buffer.h.9431C81E8E07ED11.idx  commandline.cpp.617DE17B6E225308.idx  commandline.h.7DBC6F609598BB92.idx  core.cpp.EDD77271D517CE43.idx  core.h.E3EBF6961CCC8DBE.idx  core.inl.84CBCA2E83750B28.idx  cubes.cpp.55B0B19133A86AD2.idx  d3d12.h.61A617B28846DC2C.idx  d3d12.h.89B6C7A968171F4D.idx  d3d12.h.A5CF321132E68433.idx  d3dcommon.h.391884D2C8B5E8E9.idx  d3dcommon.h.6B59D1EFA13C6C49.idx  d3dcommon.h.BDB29972FB6717B3.idx  d3dx12.h.5BC6A8B48E06DD5C.idx  d3dx12.h.77ED33ADEA413DEB.idx  d3dx12.h.849FD9CFAB3E2A27.idx  d3dx12_barriers.h.73FC9936049D1B59.idx  d3dx12_barriers.h.89C107DC01B21315.idx  d3dx12_barriers.h.F224789413D3D209.idx  d3dx12_check_feature_support.h.161166126C53497A.idx  d3dx12_check_feature_support.h.84E1EA84B14DB0E3.idx  d3dx12_check_feature_support.h.F781445D28DE825B.idx  d3dx12_core.h.72FFB7D51433D014.idx  d3dx12_core.h.7CAC9C053EBBE7C7.idx  d3dx12_core.h.F2D156EDD9605563.idx  d3dx12_default.h.03C07112F4FA2D14.idx  d3dx12_default.h.1C6C076AC5552193.idx  d3dx12_default.h.4588612AC77B058C.idx  d3dx12_pipeline_state_stream.h.30645C94E7F63297.idx  d3dx12_pipeline_state_stream.h.7E54345AD091F47A.idx  d3dx12_pipeline_state_stream.h.E2C869B33FD13698.idx  (+42 more)
Src/: defines.h
Src/Common/: util.cpp  util.h
Src/Common/entry/: entry.cpp  entry.h  entry_p.h  entry_windows.cpp
Src/Core/: commandline.cpp  commandline.h  core.cpp  core.h  handlealloc.h  macros.h  platform.h  typetraits.h
Src/Core/inline/: core.inl  handlealloc.inl  typetraits.inl
Src/RHI/: Shaders.hlsl  Shaders.hpp  Vertex.hpp  gfx_api.hpp
Src/RHI/D3D12/: gfx_dx12.cpp
Src/Render/: TinyRender.cpp  TinyRender.h  TinyRender_p.h  platform.h
Src/Samples/Sample01/: cubes.cpp  meson.build
Src/Samples/Sample01-HelloWorld/: hello_world.cpp  meson.build
Src/Samples/Sample02-EarlyDepthTest/: early_depth_test.cpp  meson.build
Src/common/: meson.build
Src/common/entry/: dbg.h  entry.cpp  entry.h  entry_p.h
Src/render/: defines.h  meson.build  tiny_render.cpp  tiny_render.h  tiny_render_p.h  vertexlayout.cpp  vertexlayout.h
Src/render/rhi/: rhi.h  rhi_d3d12.cpp  rhi_d3d12.h
scripts/: build.bat  build_with_msvc.bat  setup_meson_builds.bat
